Revisi tugas (4 Oct 24)

--- a/hari-pertama.html
+++ b/hari-pertama.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Belajar HTML & GIT Cuy</title>
+    <title>Belajar HTML</title>
 </head>
 <body>
-    <h1>Ini adalah materi pertama belajar HTML dan GIT</h1>
+    <h1>Ini adalah materi pertama belajar HTML</h1>
+    <p>Pada tanggal 4 October 2024</p>
 </body>
 </html>
